Add Luna toggle

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "modules/mintchipleaf"]
 	path = modules/mintchipleaf
-	url = https://github.com/mintchipleaf/qmk_modules.git
+	url = git@github.com:mintchipleaf/qmk_modules.git
+	branch = feature/toggle-keycode
